2016-06-17  Paolo Carlini  <paolo.carlini@oracle.com>

	* decl.c (grokfndecl): Change pair of errors to error + inform.

2016-06-17  Jason Merrill  <jason@redhat.com>

	PR c++/71209
	* typeck.c (finish_class_member_access_expr): Avoid "not a base"
	warning when there are dependent bases.

2016-06-17  Jakub Jelinek  <jakub@redhat.com>

	* semantics.c (handle_omp_array_sections_1): Don't ICE when
	processing_template_decl when checking for bitfields and unions.
	Look through REFERENCE_REF_P as base of COMPONENT_REF.
	(finish_omp_clauses): Look through REFERENCE_REF_P even for
	array sections with COMPONENT_REF bases.

2016-06-16  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_var_list_no_open): Call
	convert_from_reference before cp_parser_postfix_dot_deref_expression.
	* semantics.c (finish_omp_clauses): Don't ICE when
	processing_template_decl when checking for bitfields and unions.
	Look through REFERENCE_REF_P as base of COMPONENT_REF.

2016-06-15  Paolo Carlini  <paolo.carlini@oracle.com>

	* decl.c (wrapup_globals_for_namespace): Use DECL_SOURCE_LOCATION and
	"%qF" in warning_at instead of "%q+F" in warning.
	(check_redeclaration_exception_specification): Likewise in pedwarn
	(and error, inform, for consistency).
	* call.c (joust): Likewise.

2016-06-15  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/70202
	* decl.c (xref_basetypes): Revert r117839 changes; add fix-up
	code at the end of the for loop; also revert r159637 changes,
	add back the gcc_assert.
	* cp-tree.h (xref_basetypes): Adjust declaration.
	* parser.c (cp_parser_class_head): Adjust xref_basetypes call.

2016-06-14  David Malcolm  <dmalcolm@redhat.com>

	* search.c: Include spellcheck-tree.h rather than spellcheck.h.

2016-06-14  David Malcolm  <dmalcolm@redhat.com>

	* typeck.c: Include "gcc-rich-location.h".
	(finish_class_member_access_expr): Simplify fixit code by
	using gcc_rich_location::add_fixit_misspelled_id.

2016-06-14  Jason Merrill  <jason@redhat.com>
